# Testing2

./: README.md  org_env.rar  prediction-ci-workflows_test.rar
protein_engineering_data-dev/: preprocess.py  pyproject.toml
protein_engineering_data-dev/examples/: data_utils_examples.py  dataset_upload.sh  embeddings_transform_examples.py  offset_mutation_codes.py  pytorch_examples.py  split.py  util.py
protein_engineering_data-dev/protein_engineering_data-dev/examples/: dataset_update.py
protein_engineering_data-dev/protein_engineering_data-dev/src/pedata/: __init__.py  util.py
protein_engineering_data-dev/protein_engineering_data-dev/test/: _doctest.py  example_data.py  test_example_data.py  test_exazyme_dataset_utils.py  test_exazyme_datasets_split.py  test_exazyme_datasets_upload.py  test_pytorch_dataloaders.py  test_util.py
protein_engineering_data-dev/src/pedata/: disk_cache.py  integrity.py  pytorch_dataloaders.py  tag_finder.py
protein_engineering_data-dev/src/pedata/config/: alphabets.py
protein_engineering_data-dev/src/pedata/encoding/: base.py  embeddings_transform.py  transforms_graph.py
protein_engineering_data-dev/src/pedata/exazyme_datasets/: __init__.py  vis.py
protein_engineering_data-dev/src/pedata/mutation/: __init__.py  mutation.py  mutation_converter.py  mutation_extractor.py  mutation_util.py
protein_engineering_data-dev/test/: conftest.py  test_disk_cache.py  test_embeddings.py  test_embeddings_transform.py  test_encoding_specs.py  test_exazyme_datasets_vis.py  test_mutation.py
repo/: README.md
repo/auto_installer/: README.md  (+1 more)
(+39 files in other folders)
